# Optimizing-Memory-Performance-in-Multi-Core-Systems

./: README.md
ramulator2/: example_config.yaml  example_inst.trace
ramulator2/src/: main.cpp
ramulator2/src/addr_mapper/: CMakeLists.txt
ramulator2/src/addr_mapper/impl/: linear_mappers.cpp
ramulator2/src/base/: request.cpp  request.h  utils.cpp  utils.h
ramulator2/src/dram_controller/: CMakeLists.txt
ramulator2/src/dram_controller/impl/: generic_dram_controller.cpp
ramulator2/src/frontend/: CMakeLists.txt  frontend.h
ramulator2/src/frontend/impl/memory_trace/: custom_trace.cpp  new.cpp
ramulator2/src/frontend/impl/processor/simpleO3/: core.cpp  llc.cpp  simpleO3.cpp
ramulator2/src/memory_system/: CMakeLists.txt
ramulator2/src/memory_system/impl/: custom_DRAM_system.cpp
ramulator2/src/translation/: CMakeLists.txt
ramulator2/src/translation/impl/: Dynamic_migration.cpp  Local_to_requester.cpp  random_translation.cpp  random_translation2.cpp
snipersim/common/core/memory_subsystem/pr_l1_pr_l2_dram_directory_msi/: dram_cntlr.cc
